[package]
name = "branchd"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
daemonize = "0.5"
serde_json = "1"
